# BarbariaClient

./: .gitignore  Cargo.toml  a.out
assets/models/: 2d_default.pmf
assets/projections/: 2d_default.json  2d_text.json  3d_default.json
assets/render_units/: angmar_faction_button.json  background_mines.json  cardolan_faction_button.json  dol_amroth_faction_button.json  dorwinion_faction_button.json  dunland_faction_button.json  harad_faction_button.json  main_menu.json  misty_mountains_faction_button.json  mordor_faction_button.json  settings_button.json  shire_faction_button.json  single_player_button.json  umbar_faction_button.json
assets/screens/: faction_selection_screen.json  main_screen.json
assets/shaders/: 2d_default_gui.fs  2d_default_gui.vs  2d_text.fs  2d_text.vs
assets/texts/: angmar_description.txt  arthedain_description.txt  cardolan_description.txt  credits.txt  dale_description.txt  dol_amroth_description.txt  dorwinion_description.txt  erebor_description.txt  gondor_description.txt  harad_description.txt  imladris.txt  imladris_description.txt  isengard_description.txt  khand_description.txt  khazad_dum_description.txt  lindon_description.txt  lothlorien_description.txt  mirkwood_description.txt  misty_mountains.txt  misty_mountains_description.txt  mordor_description.txt  numenor_description.txt  rhudaur_description.txt  rhun_description.txt  rohan_description.txt  (+1 more)
config/: graphics.json
modder_documentation/: documentation.odt
src/: engine.rs  game.rs  logger.rs  main.rs  maths.rs  networking.rs  protocol.rs  resource_manager.rs
(+257 files in other folders)
