[package]
name = "barbaria_client"
version = "0.1.0"
authors = ["janek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.10.0"
glfw = "0.41.0"
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
rand = "0.8.1"  
image = "0.19.0"
nalgebra-glm = "0.11.0"
freetype-rs = "0.26.0"